// $Id: CHANGELOG.txt,v 1.194 2010/04/07 21:18:20 sun Exp $

Wysiwyg x.x-x.x, xxxx-xx-xx
---------------------------


Wysiwyg 7.x-3.x, xxxx-xx-xx
---------------------------
#752516 by nquocbao, sun: Fixed openwysiwyg version callback.
#739558 by sun, TwoD: Updated for new #type text_format.
#612954 by TwoD: Fixed broken editor settings.
#585932 by sun: Ported to Drupal 7.


Wysiwyg 6.x-3.x, xxxx-xx-xx
---------------------------
#753536 by TwoD: Fixed version detection for Whizzywig.
#752516 by nquocbao, sun: Fixed file stream warnings in version callbacks.
#628110 by quicksketch, sun, markus_petrux: Added editor settings alter hook.
#689218 by wwalc, TwoD, sun: Improved support for CKEditor.
#695398 by TwoD: Updated support for TinyMCE 3.3.
#696040 by Dave Reid: Fixed missing Cancel link on profile form.
#594322 by TwoD: Added insert method for NicEdit.
#659200 by TwoD: Fixed YUI Editor content lost in IE.
#594928 by ericbellot, TwoD, sun: Fixed 'attribs' button missing in TinyMCE.
#557090 by TwoD: Fixed Whizzywig 56 instance not removed on detach().
#667848 by TwoD, kaakuu: Fixed FCKeditor is not properly detached in IE.
#695768 by sun: Fixed #resizable removed when no editor profiles are loaded.
#631494 by TwoD: Fixed multi-site libraries directory failure for WYMeditor.
#660080 by TwoD: Fixed Notice: Undefined offset.
#613922 by TwoD, sun: Fixed PHP warning when saving profiles.
#582298 by dereine: Added auto-paste from Word detection for FCKeditor.
#597852 by sun: Fixed missing Turkish in language list.
#620176 by sun: Fixed missing Ukrainian in language list.
#613480 by TwoD, Dave Reid: Fixed PHP 5.3 compatibility.
#462146 by TwoD: Cleaned up CKEditor implementation.
#380586 by SimonEast: Updated YUI editor: Version detection not working.
#610132 by TwoD: Updated CKEditor 3.0.1, stylesheets and version check.
#620858 by quicksketch: Fixed focus event not firing for CKeditor.
#462146 by TwoD, et al: Added support for CKeditor.