@@ -1,4 +1,4 @@
-// $Id: whizzywig-56.js,v 1.1 2010/02/06 17:33:34 sun Exp $
+// $Id: whizzywig-56.js,v 1.2 2010/09/25 11:53:19 twod Exp $
 
 var wysiwygWhizzywig = { currentField: null, fields: {} };
 var buttonPath = null;
@@ -70,6 +70,11 @@ Drupal.wysiwyg.editor.attach.whizzywig = function(context, params, settings) {
   // Create Whizzywig container.
   wysiwygWhizzywig.currentField = params.field;
   wysiwygWhizzywig.fields[wysiwygWhizzywig.currentField] = '';
+  // Whizzywig needs to have the width set 'inline'.
+  $field = $('#' + params.field);
+  Drupal.wysiwyg.instances[params.field].originalWidth = $field.css('width');
+  $field.css('width', $field.width() + 'px');
+
   // Attach editor.
   makeWhizzyWig(params.field, (settings.buttons ? settings.buttons : 'all'));
   // Whizzywig fails to detect and set initial textarea contents.
@@ -98,6 +103,7 @@ Drupal.wysiwyg.editor.detach.whizzywig = function(context, params) {
     // Remove editor instance.
     $('#' + whizzies[id] + '-whizzywig').remove();
     whizzies.splice(id, 1);
+    $field.css('width', Drupal.wysiwyg.instances[$field.attr('id')].originalWidth);
   };
 
   if (typeof params != 'undefined') {
