@@ -12,9 +12,9 @@ files[] = wysiwyg.install
 files[] = wysiwyg.admin.inc
 files[] = wysiwyg.dialog.inc
 
-; Information added by drupal.org packaging script on 2010-04-08
+; Information added by drupal.org packaging script on 2010-09-25
 version = "7.x-2.x-dev"
 core = "7.x"
 project = "wysiwyg"
-datestamp = "1270685982"
+datestamp = "1285417346"
 
