@@ -1,5 +1,5 @@
 <?php
-// $Id: wysiwyg.install,v 1.6 2009/09/26 05:37:56 sun Exp $
+// $Id: wysiwyg.install,v 1.7 2010/09/10 00:39:16 sun Exp $
 
 /**
  * Implementation of hook_schema().
@@ -24,6 +24,7 @@ function wysiwyg_enable() {
   // Disable conflicting, obsolete editor integration modules whenever this
   // module is enabled. This is crude, but the only way to ensure no conflicts.
   module_disable(array(
+    'ckeditor',
     'editarea',
     'editonpro',
     'editor',
